objects/MasterAgreementExhibit__c.object
<CustomObject>
    <description>SFDC-2198 junction object to relate order forms with Master agreement exhibits. This is to establish one to many relationship between order form and Master agreement exhibit</description>
    <fields>
        <fullName>Duplicateexhibit__c</fullName>
        <description>SFDC-2198 field will be used to check if orderform/consulting has more than one data or software exhibit</description>
        <label>Duplicate exhibit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterAgreementExhibitType__c</fullName>
        <description>SFDC-2198 formula field to determine exhibit type of related Master Agreement Exhibit</description>
        <formula>Text(MasterAgreementExhibit__r.ExhibitType__c)</formula>
        <label>Master Agreement Exhibit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterAgreementExhibit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDC-2198 selected related master agreement exhibit record</description>
        <label>Master Agreement Exhibit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Agreement Exhibit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Related Master Agreement Exhibits</relationshipLabel>
        <relationshipName>MasterAgreementExhibitJunctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderFormOrConsulting__c</fullName>
        <description>SFDC- 2198 master detail relationship with order form</description>
        <inlineHelpText>Select related order form</inlineHelpText>
        <label>Order Form/Consulting</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Order form  contracts can be selected</errorMessage>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Order Form, Consulting</value>
            </filterItems>
            <infoMessage>Please enter valid order form number</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Master Agreement Exhibits</relationshipLabel>
        <relationshipName>MasterAgreementExhibits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Master Agreement Exhibit</label>
    <nameField>
        <displayFormat>MAE-{0000}</displayFormat>
        <label>Master Agreement Exhibit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Agreement Exhibits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MasterAgreementExhibitShouldBeRelated</fullName>
        <active>true</active>
        <description>SFDC-2198 the Master exhibit related to the master agreement exhibit should match the order form</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.MasterAgreementExhibit__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
OrderFormOrConsulting__r.GeneralAgreement__c != MasterAgreementExhibit__r.GeneralAgreement__c
)</errorConditionFormula>
        <errorDisplayField>MasterAgreementExhibit__c</errorDisplayField>
        <errorMessage>Master Agreement exhibit should be related to order form master agreement</errorMessage>
    </validationRules>
</CustomObject>